--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import url("https://fonts.googleapis.com/css?family=Inconsolata|Major+Mono+Display");
 
 html {
   touch-action: manipulation;
