--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,9 +1,21 @@
-$ipad_h: (only screen and (max-device-width : 1367px));
-$ipad_v: (only screen and (max-device-width : 1025px));
-$iphone: (only screen and (max-device-width : 769px));
-
-@import url("https://fonts.googleapis.com/css?family=Inconsolata|Major+Mono+Display");
-
+$ipad_h: (
+  only screen and
+    (
+      max-device-width: 1367px
+    )
+);
+$ipad_v: (
+  only screen and
+    (
+      max-device-width: 1025px
+    )
+);
+$iphone: (
+  only screen and
+    (
+      max-device-width: 769px
+    )
+);
 
 %font1 {
   font-family: "Major Mono Display", monospace;
