--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -137,7 +137,7 @@ header {
       margin-bottom: 0;
     }
     @media #{$iphone} {
-      font-size: 3.5vmin;
+      font-size: 5.5vmin;
       padding: 3vmin 2vmin;
     }
   }
@@ -348,10 +348,13 @@ footer {
   }
 
   @media #{$iphone} {
-    font-size: 3vmin;
-    padding: 0vw 4vw;
-    align-items: center;
-    height: 4.5vh;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+
+    font-size: 5vmin;
+    padding: 2vw 4vw;
+    height: 10.5vh;
     background-color: black;
     margin-top: 2vmin;
     color: white !important;
