--- a/docs/2.css
+++ b/docs/2.css
@@ -1,1 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata|Major+Mono+Display);.styles__sketch___2CWyZ{z-index:-1;position:fixed;top:0;left:0;cursor:pointer}
+.styles__sketch___1cm5D{z-index:-1;position:fixed;top:0;left:0;cursor:pointer}
