--- a/docs/4.css
+++ b/docs/4.css
@@ -1,1 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata|Major+Mono+Display);.styles__call___m9_52 h3{font-family:Major Mono Display,monospace}.styles__call___m9_52{color:#fff}.styles__call___m9_52 h3{text-transform:uppercase}
+.styles__call___1iFWr h3{font-family:Major Mono Display,monospace}.styles__call___1iFWr{color:#fff}.styles__call___1iFWr h3{text-transform:uppercase}
